--- a/deploy/roles/grafana/templates/docker-compose.yml
+++ b/deploy/roles/grafana/templates/docker-compose.yml
@@ -7,10 +7,10 @@ services:
       - GF_SECURITY_ADMIN_USER={{ grafana_admin_user }}
       - GF_SECURITY_ADMIN_PASSWORD={{ grafana_admin_password }}
       - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_LOG_FILTERS=rendering:debug
       - GF_RENDERING_SERVER_URL=http://renderer:8081/render
       - GF_RENDERING_CALLBACK_URL=http://grafana:3000/
-      - GF_LOG_FILTERS=rendering:debug
-      - GF_RENDERING_RENDERER_TOKEN=a1c5259c6efdeb5b
+      - GF_RENDERING_RENDERER_TOKEN={{ lookup('env','GF_RENDERING_RENDERER_TOKEN') }}
     ports:
       - "{{ tailscale_ip }}:{{ grafana_port }}:3000"
     volumes:
@@ -31,7 +31,7 @@ services:
     image: grafana/grafana-image-renderer:latest
     environment:
       - ENABLE_METRICS='true'
-      - AUTH_TOKEN=a1c5259c6efdeb5b
+      - AUTH_TOKEN={{ lookup('env','GF_RENDERING_RENDERER_TOKEN') }}
 
 networks:
   default:
