feat: allow fp env

--- a/turbo.json
+++ b/turbo.json
@@ -29,6 +29,7 @@
   "globalEnv": [
     "NEXT_PUBLIC_FULLPAGE_KEY",
     "CONFIG_ENVIRONMENT",
+    "PUBLIC_FP",
     "PUBLIC_WEBRTC_URI",
     "PUBLIC_SENTRY_DSN",
     "SENTRY_ORG",
