--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -180,7 +180,8 @@ jobs:
           fi
 
       - name: Run tests
-        run: cargo test --all-features
+        run: |
+          cargo test --all-features
         env:
           RUST_BACKTRACE: 1
 
