handle errors instead of unwrapping limit orders in the iterators

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,10 @@
     ".env*": "dotenv"
   },
   "github.copilot.enable": {
-    "*": true,
+    "*": false,
+    "plaintext": false,
+    "markdown": false,
+    "scminput": false,
     "dotenv": false
   },
   "markdown.extension.toc.updateOnSave": false,
