revert an unintended change to vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,10 +49,7 @@
     ".env*": "dotenv"
   },
   "github.copilot.enable": {
-    "*": false,
-    "plaintext": false,
-    "markdown": false,
-    "scminput": false,
+    "*": true,
     "dotenv": false
   },
   "markdown.extension.toc.updateOnSave": false,
