--- a/ui/portal/app/package.json
+++ b/ui/portal/app/package.json
@@ -14,12 +14,15 @@
     "expo": "~52.0.26",
     "expo-camera": "~16.0.14",
     "expo-status-bar": "~2.0.1",
+    "nativewind": "^4.1.23",
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-native": "0.76.6",
     "react-native-passkey": "^3.1.0",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-webview": "^13.12.5"
+    "react-native-reanimated": "^3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-webview": "^13.12.5",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
