--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,7 @@ clickhouse                  = { version = "0.13", git = "https://github.com/Clic
 clru                        = "0.6"
 colored                     = "3"
 colored_json                = "5"
+comfy-table                 = "7"
 config                      = "0.15"
 config-parser               = { path = "utils/config-parser" }
 criterion                   = "0.6"
