--- a/indexer/clickhouse/Cargo.toml
+++ b/indexer/clickhouse/Cargo.toml
@@ -47,6 +47,7 @@ tokio-stream   = { workspace = true }
 tracing        = { workspace = true, optional = true }
 
 [dev-dependencies]
-assertor   = { workspace = true }
-clickhouse = { workspace = true, features = ["test-util"] }
-test-case  = { workspace = true }
+assertor    = { workspace = true }
+clickhouse  = { workspace = true, features = ["test-util"] }
+comfy-table = { workspace = true }
+test-case   = { workspace = true }
