--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ ui/config/project.inlang/*
 networks/**/configs/cometbft/config/addrbook.json
 networks/**/configs/cometbft/config/write-file-atomic-*
 networks/**/data
+networks/**/logs
