feat: expo-router

--- a/ui/portal/app/package.json
+++ b/ui/portal/app/package.json
@@ -1,34 +1,43 @@
 {
   "name": "@left-curve/portal-app",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "eas-build-post-install": "cd ../../../ && pnpm build:kit",
     "build:android": "eas build -p android -e development",
     "dev:android": "eas build:run -p android -e development --latest && expo start --android",
     "build:ios": "eas build -p ios -e development",
     "dev:ios": "eas build:run -p ios -e development --latest && expo start --ios",
-    "dev": "expo start"
+    "dev": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
-    "expo": "~52.0.26",
-    "expo-camera": "~16.0.14",
-    "expo-status-bar": "~2.0.1",
+    "expo": "~53.0.20",
+    "expo-camera": "~16.1.11",
+    "expo-constants": "~17.1.7",
+    "expo-font": "~13.3.2",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
+    "expo-splash-screen": "^0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
     "nativewind": "^4.1.23",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "react-native": "0.76.6",
+    "react-native": "0.79.5",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-passkey": "^3.1.0",
-    "react-native-reanimated": "^3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-webview": "^13.12.5",
+    "react-native-screens": "~4.11.1",
+    "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.26.0",
     "@types/react": "catalog:",
-    "expo-dev-client": "~5.0.10",
-    "expo-system-ui": "^4.0.7",
+    "expo-dev-client": "~5.2.4",
     "typescript": "^5.3.3"
   },
   "private": true
