--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -163,8 +163,9 @@ services:
       # - "127.0.0.1:9009:9009" # Inter-server communication (for clusters)
       # - "127.0.0.1:9004:9004" # MySQL compatibility interface
     volumes:
-      - ./data/clickhouse:/var/lib/clickhouse
-      - ./logs/clickhouse:/var/log/clickhouse-server
+      - clickhouse_data:/var/lib/clickhouse
+      - clickhouse_logs:/var/log/clickhouse-server
+      - ./configs/clickhouse/backups:/backups
       - ./configs/clickhouse/config.xml:/etc/clickhouse-server/config.xml:ro
       - ./configs/clickhouse/users.xml:/etc/clickhouse-server/users.xml:ro
     environment:
@@ -219,3 +220,5 @@ volumes:
   dango_data:
   dango_indexer:
   cometbft_data:
+  clickhouse_data:
+  clickhouse_logs:
