--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - DB_NAME=grug_dev
       - INDEXER__DATABASE__URL=${INDEXER__DATABASE__URL:-postgres://postgres@db:5432/grug_dev}
       - INDEXER__CLICKHOUSE__URL=${INDEXER__CLICKHOUSE__URL:-http://clickhouse:8123}
+      - INDEXER__CLICKHOUSE__PASSWORD=${CLICKHOUSE_PASSWORD:-}
     tty: true
     healthcheck:
       test: ["CMD", "curl", "-f", "http://127.0.0.1:8080/up"]
@@ -58,19 +59,18 @@ services:
 
   frontend:
     image: ghcr.io/left-curve/left-curve/dango-frontend:${DANGO_TAG:-latest}
-    profiles: ["frontend"]
     labels:
       <<: *common-labels
     depends_on:
       dango:
         condition: service_healthy
     ports:
-      - "127.0.0.1:${DANGO_FRONTEND_PORT:-5080}:80"
-    environments:
-      - INDEXER_URL=http://dango:8080/graphql
-      - FAUCET_URL=https://faucet:8082/mint
-      - QUEST_URL=https://quest:8081/check_username
-      - UP_URL=https://dango:8080/up
+      - "127.0.0.1:${DANGO_FRONTEND_PORT:-5081}:80"
+    environment:
+      - INDEXER_URL=http://localhost:8080/graphql
+      - FAUCET_URL=http://localhost:8082/mint
+      - QUEST_URL=http://localhost:8081/check_username
+      - UP_URL=http://localhost:8080/up
     healthcheck:
       test: ["CMD", "curl", "-f", "http://127.0.0.1/"]
       interval: 10s
@@ -103,23 +103,26 @@ services:
       "
 
   # Need to create the database
-  quest:
-    image: ghcr.io/left-curve/bots/quest-2:latest
-    depends_on:
-      - db
-      - cometbft
-    restart: always
-    environment:
-      httpd_url: "http://cometbft:26657"
-      rest_url: "0.0.0.0:8081"
-      db_url: postgres://myuser:mypassword@db:5432/mydb
-      initial_loops: 9
-      max_loops: 3
-      trading_volume_threshold: 1000000000000
-      trading_pairs_threshold: 3
-      eth_txs_threshold: 10
-      eth_txs_cache_ttl: 30s
-      eth_rpc_url: "${ETH_RPC_URL}"
+  # quest:
+  #   image: ghcr.io/left-curve/bots/quest-2:${QUEST_VERSION:-latest}
+  #   profiles: ["quest"]
+  #   depends_on:
+  #     - db
+  #     - cometbft
+  #   restart: always
+  #   ports:
+  #     - 127.0.0.1:${QUEST_PORT:-8081}:8081
+  #   environment:
+  #     httpd_url: "http://cometbft:26657"
+  #     rest_url: "0.0.0.0:8081"
+  #     db_url: postgres://myuser:mypassword@db:5432/mydb
+  #     initial_loops: 9
+  #     max_loops: 3
+  #     trading_volume_threshold: 1000000000000
+  #     trading_pairs_threshold: 3
+  #     eth_txs_threshold: 10
+  #     eth_txs_cache_ttl: 30s
+  #     eth_rpc_url: "${ETH_RPC_URL}"
 
   faucet:
     image: ghcr.io/left-curve/bots/faucet:${FAUCET_VERSION:-latest}
@@ -132,6 +135,8 @@ services:
     environment:
       - HOME=/app
     tty: true
+    ports:
+      - 127.0.0.1:${FAUCET_PORT:-8082}:8082
     command: ["faucet", "--provider-url", "http://dango:8080", "--chain-id", "{{ chain_id }}"]
     healthcheck:
       test: ["CMD", "curl", "-f", "http://127.0.0.1:8082/health"]
