--- a/ui/portal/app/package.json
+++ b/ui/portal/app/package.json
@@ -13,32 +13,36 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
-    "expo": "~53.0.20",
-    "expo-camera": "~16.1.11",
-    "expo-constants": "~17.1.7",
-    "expo-font": "~13.3.2",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.4",
-    "expo-splash-screen": "^0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.10",
+    "expo-camera": "~16.0.14",
     "nativewind": "^4.1.23",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "react-native": "0.79.5",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-safe-area-context": "5.4.0",
     "react-native-passkey": "^3.1.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo": "~52.0.47",
+    "expo-constants": "~17.0.8",
+    "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.9",
+    "expo-web-browser": "~14.0.2",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
+    "@babel/core": "^7.25.2",
     "@types/react": "catalog:",
-    "expo-dev-client": "~5.2.4",
-    "typescript": "^5.3.3"
+    "expo-dev-client": "~5.0.10",
+    "expo-system-ui": "^4.0.7"
   },
   "private": true
 }
