--- a/.github/workflows/sdk-docs-deployment.yaml
+++ b/.github/workflows/sdk-docs-deployment.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_NPM }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Packages
         run: pnpm build:sdk
