--- a/.github/workflows/localdango.yml
+++ b/.github/workflows/localdango.yml
@@ -5,6 +5,7 @@ concurrency:
 env:
   GIT_COMMIT: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}
 on:
+  workflow_dispatch:
   workflow_run:
     workflows: ["Rust", "Portal Deployment"]
     types: [completed]
