--- a/.github/workflows/localdango.yml
+++ b/.github/workflows/localdango.yml
@@ -3,7 +3,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 env:
-  GIT_COMMIT: ${{ github.event.workflow_run.head_sha || github.sha }}
+  GIT_COMMIT: ${{ github.event.workflow_run.head_sha || github.event.pull_request.head.sha || github.sha }}
 on:
   workflow_dispatch:
   workflow_run:
