--- a/.github/workflows/localdango.yml
+++ b/.github/workflows/localdango.yml
@@ -3,7 +3,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 env:
-  GIT_COMMIT: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}
+  GIT_COMMIT: ${{ github.event.workflow_run.head_sha || github.event.pull_request.head.sha || github.sha }}
 on:
   workflow_dispatch:
   workflow_run:
@@ -59,6 +59,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Debug workflow_run event
+        run: |
+          echo "Event name: ${{ github.event_name }}"
+          echo "workflow_run.head_sha: ${{ github.event.workflow_run.head_sha }}"
+          echo "workflow_run.head_branch: ${{ github.event.workflow_run.head_branch }}"
+          echo "Current GIT_COMMIT: ${{ env.GIT_COMMIT }}"
+          echo "github.sha: ${{ github.sha }}"
       - name: Ensure localdango works
         env:
           DANGO_TAG: ${{ env.GIT_COMMIT }}
