--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -207,7 +207,7 @@ jobs:
           files: target/coverage/lcov.info
           token: ${{ secrets.QLTY_COVERAGE_TOKEN }}
 
-  build:
+  backend-build:
     timeout-minutes: 20
     strategy:
       fail-fast: false
@@ -335,10 +335,10 @@ jobs:
         run: |
           docker run --rm ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-${{ steps.config.outputs.suffix }} dango || true
 
-  push-manifest:
+  backend-push-manifest:
     permissions:
       packages: write
-    needs: [build]
+    needs: [backend-build]
     runs-on: [self-hosted]
     steps:
       - name: Log in to GHCR
@@ -373,6 +373,109 @@ jobs:
           echo "| **Image URL:** | [ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}](https://github.com/left-curve/left-curve/pkgs/container/dango) |" >> $GITHUB_STEP_SUMMARY
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
             echo "| **Latest tag:** | [ghcr.io/left-curve/left-curve/dango:latest](https://github.com/left-curve/left-curve/pkgs/container/dango) |" >> $GITHUB_STEP_SUMMARY
+          fi
+          echo "| **Architectures:** | amd64, arm64 |" >> $GITHUB_STEP_SUMMARY
+
+  frontend-build:
+    permissions:
+      packages: write
+    timeout-minutes: 30
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - arch: amd64
+            runner: [self-hosted]
+          # NOTE: building arm on `self-hosted` is very very slow
+          - arch: arm64
+            runner: ubuntu-24.04-arm
+    name: Build ${{ matrix.arch }} on ${{ join(matrix.runner, ', ') }}
+    runs-on: ${{ matrix.runner }}
+    env:
+      GITHUB_USER: ${{ github.actor }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
+
+      - uses: docker/setup-buildx-action@v3
+
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set build config
+        id: config
+        run: |
+          set -euo pipefail
+          if [[ "${{ matrix.arch }}" == "amd64" ]]; then
+            echo "target=x86_64-unknown-linux-gnu" >> $GITHUB_OUTPUT
+            echo "platform=linux/amd64" >> $GITHUB_OUTPUT
+            echo "suffix=amd64" >> $GITHUB_OUTPUT
+          elif [[ "${{ matrix.arch }}" == "arm64" ]]; then
+            echo "target=aarch64-unknown-linux-gnu" >> $GITHUB_OUTPUT
+            echo "platform=linux/arm64" >> $GITHUB_OUTPUT
+            echo "suffix=arm64" >> $GITHUB_OUTPUT
+          else
+              echo "Unsupported matrix ${{ matrix.arch }}"
+              exit 1
+          fi
+
+      - name: build docker image
+        run: |
+          set -euo pipefail
+          docker buildx build \
+            --push \
+            --platform ${{ steps.config.outputs.platform }} \
+            --build-arg TARGET_ARCH=${{ steps.config.outputs.target }} \
+            --build-arg GIT_COMMIT=${{ env.GIT_COMMIT }} \
+            --build-arg GITHUB_TOKEN=${{ env.GITHUB_TOKEN }} \
+            --provenance=false \
+            -t ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }}-${{ steps.config.outputs.suffix }} \
+            -f docker/dango-frontend/Dockerfile .
+
+  frontend-push-manifest:
+    permissions:
+      packages: write
+    needs: [frontend-build]
+    runs-on: [self-hosted]
+    steps:
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create and push multi-arch Docker manifest
+        run: |
+          docker manifest create ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }} \
+            --amend ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }}-amd64 \
+            --amend ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }}-arm64
+
+          docker manifest push --purge ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }}
+
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            docker manifest create ghcr.io/left-curve/left-curve/dango-frontend:latest \
+              --amend ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }}-amd64 \
+              --amend ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }}-arm64
+
+            docker manifest push --purge ghcr.io/left-curve/left-curve/dango-frontend:latest
+          fi
+
+      - name: Frontend Docker Deploy Summary
+        run: |
+          echo "# 🎨 Frontend Docker Multi-arch Manifest" >> $GITHUB_STEP_SUMMARY
+          echo "| Name | Result |" >> $GITHUB_STEP_SUMMARY
+          echo "| ---- | ------ |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Commit:** | \`${{ env.GIT_COMMIT }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Status:** | ✅ Frontend manifest pushed! |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Image URL:** | [ghcr.io/left-curve/left-curve/dango-frontend:${{ env.GIT_COMMIT }}](https://github.com/left-curve/left-curve/pkgs/container/dango-frontend) |" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            echo "| **Latest tag:** | [ghcr.io/left-curve/left-curve/dango-frontend:latest](https://github.com/left-curve/left-curve/pkgs/container/dango-frontend) |" >> $GITHUB_STEP_SUMMARY
           fi
           echo "| **Architectures:** | amd64, arm64 |" >> $GITHUB_STEP_SUMMARY
 
@@ -433,3 +536,43 @@ jobs:
             -e "dango_db_password=$DANGO_DB_PASSWORD" \
             -e '{"dango_networks":["devnet"]}'
           ansible-playbook bots.yml --limit 100.96.253.40 -e '{"dango_networks":["devnet"]}' -e faucet_version=latest
+
+  localdango:
+    timeout-minutes: 5
+    name: Testing localdango
+    runs-on: [self-hosted]
+    needs: [frontend-push-manifest, backend-push-manifest]
+    permissions:
+      packages: read
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Ensure localdango works
+        env:
+          DANGO_TAG: ${{ env.GIT_COMMIT }}
+          POSTGRES_PORT: 0
+          CLICKHOUSE_PORT: 0
+          DANGO_PORT: 0
+          COMETBFT_PORT: 0
+          COMETBFT_TAG: v0.38.17
+        run: |
+          cd networks/localdango
+          docker compose down -v
+          docker compose up -d --wait || {
+            echo "Services failed to become healthy"
+            docker compose ps
+            docker compose logs
+            exit 1
+          }
+      - name: Cleanup
+        if: always()
+        run: |
+          cd networks/localdango
+          docker compose down -v || true
