--- a/ui/portal/app/package.json
+++ b/ui/portal/app/package.json
@@ -13,13 +13,9 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
-    "expo-camera": "~16.0.14",
-    "nativewind": "^4.1.23",
-    "react": "catalog:",
-    "react-dom": "catalog:",
-    "react-native-passkey": "^3.1.0",
-    "tailwindcss": "^3.4.17",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.47",
+    "expo-camera": "~16.0.14",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
@@ -29,13 +25,19 @@
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-web-browser": "~14.0.2",
+    "nativewind": "^4.1.23",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-passkey": "^3.1.0",
+    "react-native-quick-crypto": "^0.7.17",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
