prepare code to switch to Pyth Lazer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ members = [
   "indexer/sql-migration",
   "indexer/testing",
   "pyth/client",
+  "pyth/lazer",
   "pyth/types",
   "utils/config-parser",
   "utils/dyn-event",
