--- a/pyth/client/Cargo.toml
+++ b/pyth/client/Cargo.toml
@@ -10,6 +10,7 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [dependencies]
+anyhow              = { workspace = true }
 async-stream        = { workspace = true }
 async-trait         = { workspace = true }
 grug                = { workspace = true }
