--- a/pyth/lazer/Cargo.toml
+++ b/pyth/lazer/Cargo.toml
@@ -13,8 +13,9 @@ version       = { workspace = true }
 # anyhow        = { workspace = true }
 # byteorder     = { workspace = true }
 # data-encoding = { workspace = true }
-# grug          = { workspace = true }
+grug = { workspace = true }
 # hex-literal   = { workspace = true }
+# dango-types         = { workspace = true }
 grug-testing        = { workspace = true }
 pyth-lazer-client   = { workspace = true }
 pyth-lazer-protocol = { workspace = true }
