--- a/indexer/client/Cargo.toml
+++ b/indexer/client/Cargo.toml
@@ -24,6 +24,7 @@ serde          = { workspace = true }
 serde_json     = { workspace = true }
 tendermint-rpc = { workspace = true }
 tracing        = { workspace = true, optional = true }
+url            = { workspace = true }
 
 [dev-dependencies]
 assert-json-diff = { workspace = true }
