--- a/deploy/roles/full-app/tasks/main.yml
+++ b/deploy/roles/full-app/tasks/main.yml
@@ -29,29 +29,73 @@
     dest: "{{ ansible_env.HOME }}/deployments/{{ deployment_name }}/docker-compose.yml"
     owner: "{{ deploy_user }}"
 
+- name: Generate .env
+  become: true
+  become_user: root
+  template:
+    src: env.j2
+    dest: "{{ ansible_env.HOME }}/deployments/{{ deployment_name }}/.env"
+    owner: "{{ deploy_user }}"
+
 - name: Login to GHCR
   community.docker.docker_login:
     registry: ghcr.io
     username: "{{ ghcr_user }}"
     password: "{{ ghcr_token }}"
 
-- name: Deploy stack
+- name: Deploy dango stack first to get binded ports
   community.docker.docker_compose_v2:
     project_name: "{{ deployment_name }}"
     project_src: "{{ ansible_env.HOME }}/deployments/{{ deployment_name }}"
     pull: always
     recreate: always
+    services:
+      - db
+      - faucet-bot
+      - clickhouse
+      - dango
+      - cometbft
 
-- name: Get assigned ports
+- name: Get dango and faucet assigned ports
   shell: |
     docker port {{ deployment_name }}-dango-1 8080 | cut -d: -f2
     docker port {{ deployment_name }}-faucet-bot-1 8082 | cut -d: -f2
   register: assigned_ports
 
-- name: Set port facts
+- name: Set dango and faucet port facts
   set_fact:
     dango_port: "{{ assigned_ports.stdout_lines[0] }}"
     faucet_port: "{{ assigned_ports.stdout_lines[1] }}"
+
+- name: Generate .env with the right ports
+  become: true
+  become_user: root
+  template:
+    src: env.j2
+    dest: "{{ ansible_env.HOME }}/deployments/{{ deployment_name }}/.env"
+    owner: "{{ deploy_user }}"
+
+- name: Deploy all
+  community.docker.docker_compose_v2:
+    project_name: "{{ deployment_name }}"
+    project_src: "{{ ansible_env.HOME }}/deployments/{{ deployment_name }}"
+
+- name: Get frontend assigned ports
+  shell: |
+    docker port {{ deployment_name }}-dango-frontend-1 80 | cut -d: -f2
+  register: assigned_ports
+
+- name: Set frontend port facts
+  set_fact:
+    dango_frontend_port: "{{ assigned_ports.stdout_lines[0] }}"
+
+- name: Generate .env with the right ports
+  become: true
+  become_user: root
+  template:
+    src: env.j2
+    dest: "{{ ansible_env.HOME }}/deployments/{{ deployment_name }}/.env"
+    owner: "{{ deploy_user }}"
 
 - name: Comment on PR
   uri:
@@ -64,6 +108,7 @@
       body: |
         🚀 **PR Preview Deploy Ready!**
 
+        - **Frontend**: http://{{ tailscale_ip }}:{{ dango_frontend_port }}
         - **Dango**: http://{{ tailscale_ip }}:{{ dango_port }}
         - **Faucet**: http://{{ tailscale_ip }}:{{ faucet_port }}
   when: github_pr_number is defined
@@ -72,6 +117,7 @@
   debug:
     msg:
       - "🚀 Preview Deploy Ready!"
+      - "Frontend: http://{{ tailscale_ip }}:{{ dango_frontend_port }}"
       - "Dango: http://{{ tailscale_ip }}:{{ dango_port }}"
       - "Faucet: http://{{ tailscale_ip }}:{{ faucet_port }}"
   when: github_pr_number is not defined
