--- a/docker/dango-frontend/Dockerfile
+++ b/docker/dango-frontend/Dockerfile
@@ -17,8 +17,8 @@ WORKDIR /app
 ARG GITHUB_TOKEN
 ENV GITHUB_TOKEN=$GITHUB_TOKEN
 
-ARG GITHUB_COMMIT
-ENV GITHUB_COMMIT=$GITHUB_COMMIT
+ARG GIT_COMMIT
+ENV GIT_COMMIT=$GIT_COMMIT
 
 # CONFIG_ENVIRONMENT: ${{ github.ref_name == 'ui/testnet' && 'test' || github.ref_name == 'ui/release' && 'prod' || 'dev' }}
 # PUBLIC_WEBRTC_URI: ${{ secrets.PUBLIC_WEBRTC_URI }}
@@ -37,7 +37,7 @@ RUN pnpm build:portal-web
 FROM nginx:alpine
 
 LABEL org.opencontainers.image.description="Dango frontend docker image"
-LABEL org.opencontainers.image.revision=$GITHUB_COMMIT
+LABEL org.opencontainers.image.revision=$GIT_COMMIT
 LABEL org.opencontainers.image.source="https://github.com/left-curve/left-curve"
 
 COPY --from=builder /app/ui/portal/web/build /usr/share/nginx/html
